Fix framesEncoded/framesDecoded RTC stats https://bugs.webkit.org/show_bug.cgi?id=170024

Patch by Youenn Fablet <youenn@apple.com> on 2017-03-24
Reviewed by Eric Carlson.

Source/WebCore:

Test: webrtc/video-stats.html

Adding access to these fields now that they are available.

* Modules/mediastream/libwebrtc/LibWebRTCMediaEndpoint.cpp:
(WebCore::fillInboundRTPStreamStats):
(WebCore::fillOutboundRTPStreamStats):

LayoutTests:

* webrtc/video-stats-expected.txt: Added.
* webrtc/video-stats.html: Added.

Canonical link: https://commits.webkit.org/186973@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@214348 268f45cc-cd09-0410-ab3c-d52691b4dbfc